New experimental branch. Testing stereo setup. MOD: demo player main, increase window size; demo plugin project and filters, new file added; demo callbacks, starting with intro scene; demo state load, commenting unused stuff, adding new shaders; intro demo mode, added section for stereo code; decoded important shaders. ADD: stereo geometry shader template.

--- a/animal3D SDK/project/VisualStudio/animal3D-DemoPlugin/animal3D-DemoPlugin.vcxproj
+++ b/animal3D SDK/project/VisualStudio/animal3D-DemoPlugin/animal3D-DemoPlugin.vcxproj
@@ -238,6 +238,7 @@
     <None Include="..\..\..\resource\glsl\4x\fs\drawColorAttrib_fs4x.glsl" />
     <None Include="..\..\..\resource\glsl\4x\fs\drawColorUnif_fs4x.glsl" />
     <None Include="..\..\..\resource\glsl\4x\gs\00-common\drawTangentBasis_gs4x.glsl" />
+    <None Include="..\..\..\resource\glsl\4x\gs\00-common\passthru_stereo_gs4x.glsl" />
     <None Include="..\..\..\resource\glsl\4x\gs\00-common\utilCommon_gs4x.glsl" />
     <None Include="..\..\..\resource\glsl\4x\vs\00-common\passTangentBasis_transform_instanced_vs4x.glsl" />
     <None Include="..\..\..\resource\glsl\4x\vs\00-common\passTangentBasis_transform_vs4x.glsl" />
